# assignment

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  agent.py  deploy-do.sh  docker-compose.yml  env.example  livekit-values-do.yaml  livekit.toml  livekit_config.yaml  livekit_vs_pipecat.md  metrics.py  pyproject.toml  setup_sip_trunks.sh  start_monitoring.sh  test_latency.py  wouldbreak.md
k8s/: deploy.sh
k8s/base/: kustomization.yaml  livekit-server.yaml  namespace.yaml  prometheus.yaml  redis.yaml  secrets.yaml  voice-agent.yaml
k8s/overlays/digitalocean/: digitalocean-patch.yaml  ingress.yaml  kustomization.yaml  voice-agent-only.yaml
k8s/overlays/local/: kustomization.yaml  local-patch.yaml
k8s/overlays/production/: kustomization.yaml  production-patch.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: livekit-server-metrics.json  livekit-voice-agent-dashboard.json  voice-agent-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
src/: agent.py
