[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.2",
    "python-dotenv>=1.1.1",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
    "asyncio-mqtt>=0.16.0",
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "livekit-plugins-openai>=1.2.14",
    "livekit-plugins-assemblyai>=1.2.14",
    "livekit-plugins-cartesia>=1.2.14",
    "livekit-plugins-noise-cancellation>=0.2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
